--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/udurraniAtPresage/applepie/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/udurraniAtPresage/applepie/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/udurraniAtPresage/applepie/graph/badge.svg)](https://app.codecov.io/gh/udurraniAtPresage/applepie)
 <!-- badges: end -->
 
 The goal of applepie is to access R-universe API from R, for a tutorial.
